# hh-dwh

./: README.md  luigi.cfg.example  pyproject.toml
docs/: architecture.drawio
schema/: README.md  ddl.sql  schema.rtf  schema.txt
tasks/: aux.py  dim.py  download.py  fact.py  sqla.py
