[tool.poetry]
name = "hh-dwh"
version = "0.1.0"
description = "DWH for HeadHunter"
authors = ["Irene Antushevich <koop1214@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.26.0"
luigi = "^3.0.3"
psycopg2-binary = "^2.9.1"
SQLAlchemy = "^1.4.22"
pandas = "^1.3.2"
lxml = "^4.6.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
